<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.EditItemFragment">

    <data>

        <variable
            name="viewModel"
            type="com.easysystems.easyorder.viewModels.ItemListViewModel" />
        <variable
            name="itemObservable"
            type="com.easysystems.easyorder.data.ItemObservable" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topGroup"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageOuterHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/itemImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/picture_of_menu_item"
                    android:scaleType="fitXY"
                    android:src="@{itemObservable.image}"
                    app:strokeColor="@color/grey_teal_unused"
                    app:strokeWidth="2dp"
                    app:shapeAppearanceOverlay="@style/rounded_square"
                    app:srcCompat="@drawable/default_image"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnOuterHolder"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="250dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageOuterHolder"
                app:layout_constraintEnd_toEndOf="@+id/imageOuterHolder">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnInnerHolder"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="250dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEdit"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:insetLeft="-4dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        app:icon="@drawable/ic_baseline_edit_24"
                        app:iconGravity="start"
                        app:iconPadding="0dp"
                        app:iconSize="30dp"
                        app:shapeAppearanceOverlay="@style/button_rounded"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/middleGroup"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_border_transparent_background"
            app:layout_constraintBottom_toTopOf="@+id/bottomGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topGroup">

            <EditText
                android:id="@+id/editName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2.5dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:gravity="center|start"
                android:hint="@string/text_enter_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@{itemObservable.name}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@+id/editPrice"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textViewValuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2.5dp"
                android:text="@{viewModel.valuta}"
                android:textColor="@color/teal3"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@+id/editPrice"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/editName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:gravity="center|end"
                android:hint="@string/text_enter_price"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@{itemObservable.price}"
                android:textColor="@color/teal3"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewValuta"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/editCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/text_add_category"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:text="@{itemObservable.category}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                android:background="@null"
                app:layout_constraintBottom_toTopOf="@id/editDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editName"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/teal3"
                app:layout_constraintBottom_toTopOf="@+id/editDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCategory" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top|start"
                android:text="@{itemObservable.description}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                android:ellipsize="end"
                android:hint="@string/text_add_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingStart="60dp"
                android:paddingEnd="0dp"
                android:stateListAnimator="@null"
                android:text="@string/btn_edit_save"
                android:textAllCaps="false"
                android:visibility="visible"
                app:cornerRadius="0dp"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/iconSave"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/save_icon"
                android:elevation="2dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/bottomGroup"
                app:layout_constraintStart_toStartOf="@+id/bottomGroup"
                app:srcCompat="@drawable/ic_baseline_save_24"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>