<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.FocusItemFragment">

    <data>
        <variable
            name="viewModel"
            type="com.easysystems.easyorder.viewModels.ItemListViewModel" />
        <variable
            name="itemObservable"
            type="com.easysystems.easyorder.data.ItemObservable" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topGroup"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageOuterHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/itemImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/picture_of_menu_item"
                        android:scaleType="fitXY"
                        android:src="@{itemObservable.image}"
                        app:strokeColor="@color/grey_teal_unused"
                        app:strokeWidth="2dp"
                        app:shapeAppearanceOverlay="@style/rounded_square"
                        app:srcCompat="@drawable/default_image"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/middleGroup"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_border_transparent_background"
            app:layout_constraintBottom_toTopOf="@+id/bottomGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topGroup">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2.5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center|start"
                android:text="@{itemObservable.name}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
                app:layout_constraintEnd_toStartOf="@+id/textViewValuta"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textViewValuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2.5dp"
                android:text="@{viewModel.valuta}"
                android:textColor="@color/teal3"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@+id/textViewPrice"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center|end"
                android:text="@{itemObservable.price}"
                android:textColor="@color/teal3"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewValuta"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/teal3"
                app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top|start"
                android:text="@{itemObservable.description}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnAddFromFocusItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingStart="60dp"
                android:paddingEnd="0dp"
                android:stateListAnimator="@null"
                android:text="@string/add_to_order"
                android:textAllCaps="false"
                android:visibility="visible"
                app:cornerRadius="0dp"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/iconOrders"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/bottomGroup"
                app:layout_constraintStart_toStartOf="@+id/bottomGroup"
                app:srcCompat="@drawable/ic_baseline_shopping_bag_24"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck" />

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/badgeOrders"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/badge_count"
                android:elevation="10dp"
                android:textColor="@color/white"
                android:visibility="visible"
                android:text="@string/text_zero"
                app:layout_constraintBottom_toBottomOf="@id/bottomGroup"
                app:layout_constraintStart_toStartOf="@+id/bottomGroup"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>